// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRegistrationForm should error if username is too long 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center mt-6"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
          data-testid="TransactionNetwork"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdnxRM NjstW"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kiLoSW no-ligatures"
          data-testid="TransactionSender"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="pt-6 space-y-6"
        >
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kknRCr flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 kzbxct"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-invalid="true"
                  class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              >
                <span
                  data-errortext="Delegate Name should have at most 20 characters"
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdnxRM NjstW text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      circle-exclamation-mark.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 faOaTv"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
                  >
                    <input
                      class="Toggle__Input-sc-6s3wfu-1 utRNX"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-sc-6s3wfu-2 giHppe"
                    >
                      <span
                        class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                      />
                    </div>
                  </label>
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 bBuInq"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-3 w-full"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should render form step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center mt-6"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
          data-testid="TransactionNetwork"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdnxRM NjstW"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kiLoSW no-ligatures"
          data-testid="TransactionSender"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="pt-6 space-y-6"
        >
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 iqZIWh"
                disabled=""
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
                    data-testid="InputCurrency"
                    disabled=""
                    name="fee"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="flex flex-col justify-between border-l h-14 -mr-4 w-10 text-theme-secondary-700 dark:border-theme-secondary-700 border-theme-secondary-300"
                      >
                        <button
                          class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 bwAUBK"
                          data-testid="InputFeeAdvanced__up"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="sc-bdnxRM AkeAK"
                            height="10"
                            width="10"
                          >
                            <svg>
                              chevron-up-small.svg
                            </svg>
                          </div>
                        </button>
                        <button
                          class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 gmyhdQ"
                          data-testid="InputFeeAdvanced__down"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="sc-bdnxRM AkeAK"
                            height="10"
                            width="10"
                          >
                            <svg>
                              chevron-down-small.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should render review step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__review-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Transaction Review
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
          data-testid="TransactionNetwork"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdnxRM NjstW"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
          data-testid="TransactionSender"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Delegate Name
            </div>
            <div
              class="flex items-center font-semibold"
            />
          </div>
        </div>
        <div
          class="mt-2"
        >
          <div
            class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="relative p-4"
            >
              <div
                class="flex divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
              >
                <div
                  class="flex flex-col justify-center py-2 px-4 w-1/2"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-aeus64-0 fOdPzL"
                  >
                    Transaction Amount
                  </span>
                  <span
                    class="whitespace-nowrap mt-1 text-lg font-semibold"
                    data-testid="AmountCrypto"
                  >
                    0 DARK
                  </span>
                </div>
                <div
                  class="flex flex-col justify-center py-2 px-4 w-1/2 text-right"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-aeus64-0 fOdPzL"
                  >
                    Transaction Fee
                  </span>
                  <span
                    class="whitespace-nowrap mt-1 text-lg font-semibold"
                    data-testid="AmountCrypto"
                  >
                    2 DARK
                  </span>
                </div>
              </div>
              <div
                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
              >
                <div
                  class="py-2 ml-px bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      plus.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-center py-6 rounded-b-lg border-t border-theme-secondary-300 justfiy-center bg-theme-secondary-100 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
            >
              <span
                class="TotalAmountBox__AmountLabel-sc-aeus64-0 fOdPzL"
              >
                Total Amount
              </span>
              <span
                class="whitespace-nowrap text-2xl font-bold"
                data-testid="AmountCrypto"
              >
                2 DARK
              </span>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should set fee 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center mt-6"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
          data-testid="TransactionNetwork"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdnxRM NjstW"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kiLoSW no-ligatures"
          data-testid="TransactionSender"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="pt-6 space-y-6"
        >
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 bBuInq"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
                  >
                    <input
                      class="Toggle__Input-sc-6s3wfu-1 utRNX"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-sc-6s3wfu-2 giHppe"
                    >
                      <span
                        class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                      />
                    </div>
                  </label>
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 faOaTv"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="InputCurrency"
                      name="fee"
                      type="text"
                      value="11"
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex flex-col justify-between border-l h-14 -mr-4 w-10 text-theme-secondary-700 dark:border-theme-secondary-700 border-theme-secondary-400"
                        >
                          <button
                            class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 bwAUBK"
                            data-testid="InputFeeAdvanced__up"
                            type="button"
                          >
                            <div
                              class="sc-bdnxRM AkeAK"
                              height="10"
                              width="10"
                            >
                              <svg>
                                chevron-up-small.svg
                              </svg>
                            </div>
                          </button>
                          <button
                            class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 gmyhdQ"
                            data-testid="InputFeeAdvanced__down"
                            type="button"
                          >
                            <div
                              class="sc-bdnxRM AkeAK"
                              height="10"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should show error if username already exists 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center mt-6"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
          data-testid="TransactionNetwork"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdnxRM NjstW"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kiLoSW no-ligatures"
          data-testid="TransactionSender"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="pt-6 space-y-6"
        >
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kknRCr flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 kzbxct"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-invalid="true"
                  class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              >
                <span
                  data-errortext="Delegate Name already exists"
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdnxRM NjstW text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      circle-exclamation-mark.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 faOaTv"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
                  >
                    <input
                      class="Toggle__Input-sc-6s3wfu-1 utRNX"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-sc-6s3wfu-2 giHppe"
                    >
                      <span
                        class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                      />
                    </div>
                  </label>
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 bBuInq"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-3 w-full"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should show error if username contains illegal characters 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center mt-6"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
          data-testid="TransactionNetwork"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdnxRM NjstW"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kiLoSW no-ligatures"
          data-testid="TransactionSender"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="pt-6 space-y-6"
        >
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kknRCr flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 kzbxct"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-invalid="true"
                  class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              >
                <span
                  data-errortext="The following characters are not allowed: '<', '>'"
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdnxRM NjstW text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      circle-exclamation-mark.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 faOaTv"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
                  >
                    <input
                      class="Toggle__Input-sc-6s3wfu-1 utRNX"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-sc-6s3wfu-2 giHppe"
                    >
                      <span
                        class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                      />
                    </div>
                  </label>
                  <span
                    class="Switch__SwitchText-sc-161iiro-0 bBuInq"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-3 w-full"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 ivLOIB"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="AmountCrypto"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
